Six new tests added into testlet/java/lang/Float/classInfo.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2015-05-15  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
+	* testlet/java/lang/Float/classInfo/getDeclaredConstructor.java:
+	* testlet/java/lang/Float/classInfo/getDeclaredConstructors.java:
+	* testlet/java/lang/Float/classInfo/getDeclaredField.java:
+	* testlet/java/lang/Float/classInfo/getDeclaredFields.java:
+	* testlet/java/lang/Float/classInfo/getDeclaredMethod.java:
+	* testlet/java/lang/Float/classInfo/getDeclaredMethods.java:
+	Six new tests added into testlet/java/lang/Float/classInfo.
+
+2015-05-15  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
 	* testlet/java/lang/Float/classInfo/getAnnotation.java:
 	* testlet/java/lang/Float/classInfo/getAnnotations.java:
 	* testlet/java/lang/Float/classInfo/getCanonicalName.java:
