Four new tests added into testlet/java/lang/Float/classInfo.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2015-06-01  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/Float/classInfo/getConstructor.java:
+	* testlet/java/lang/Float/classInfo/getConstructors.java:
+	* testlet/java/lang/Float/classInfo/getDeclaredAnnotations.java:
+	* testlet/java/lang/Float/classInfo/getDeclaredClasses.java:
+	Four new tests added into testlet/java/lang/Float/classInfo.
+
 2015-05-15  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/Float/classInfo/getDeclaredConstructor.java:
