Six new tests added into testlet/java/lang/Float/classInfo.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2015-06-02  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/Float/classInfo/getDeclaringClass.java:
+	* testlet/java/lang/Float/classInfo/getEnclosingClass.java:
+	* testlet/java/lang/Float/classInfo/getEnclosingConstructor.java:
+	* testlet/java/lang/Float/classInfo/getEnclosingMethod.java:
+	* testlet/java/lang/Float/classInfo/getField.java:
+	* testlet/java/lang/Float/classInfo/getFields.java:
+	Six new tests added into testlet/java/lang/Float/classInfo.
+
 2015-06-01  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/Float/classInfo/getConstructor.java:
