--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2015-07-01  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/InheritableThreadLocal/classInfo/getComponentType.java:
+	* testlet/java/lang/InheritableThreadLocal/classInfo/getConstructor.java:
+	* testlet/java/lang/InheritableThreadLocal/classInfo/getConstructors.java:
+	* testlet/java/lang/InheritableThreadLocal/classInfo/getDeclaredAnnotations.java:
+	* testlet/java/lang/InheritableThreadLocal/classInfo/getDeclaredClasses.java:
+	Five new tests added into InheritableThreadLocal.
+
 2015-06-19  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/InheritableThreadLocal/classInfo/getDeclaredMethod.java:
