--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2015-07-09  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/Integer/classInfo/InstanceOf.java:
+	* testlet/java/lang/Integer/classInfo/getInterfaces.java:
+	* testlet/java/lang/Integer/classInfo/getModifiers.java:
+	* testlet/java/lang/Integer/classInfo/getName.java:
+	* testlet/java/lang/Integer/classInfo/getPackage.java:
+	Updated five tests in Integer/classInfo.
+
 2015-07-08  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/Integer/decode.java:
