--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2015-07-10  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/Integer/classInfo/getAnnotation.java:
+	* testlet/java/lang/Integer/classInfo/getAnnotations.java:
+	* testlet/java/lang/Integer/classInfo/getCanonicalName.java:
+	* testlet/java/lang/Integer/classInfo/getClasses.java:
+	* testlet/java/lang/Integer/classInfo/getComponentType.java:
+	* testlet/java/lang/Integer/classInfo/getConstructor.java:
+	Added six new tests into Integer/classInfo.
+
 2015-07-09  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/Integer/classInfo/InstanceOf.java:
