--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2015-07-15  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/Integer/classInfo/getConstructors.java:
+	* testlet/java/lang/Integer/classInfo/getField.java:
+	* testlet/java/lang/Integer/classInfo/getFields.java:
+	* testlet/java/lang/Integer/classInfo/getMethod.java:
+	* testlet/java/lang/Integer/classInfo/getMethods.java:
+	Added another five new tests into Integer/classInfo.
+
 2015-07-14  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/Integer/classInfo/getDeclaredMethod.java:
