--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2015-08-10  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/Long/classInfo/InstanceOf.java:
+	* testlet/java/lang/Long/classInfo/getInterfaces.java:
+	* testlet/java/lang/Long/classInfo/getModifiers.java:
+	* testlet/java/lang/Long/classInfo/getName.java:
+	* testlet/java/lang/Long/classInfo/getPackage.java:
+	Updated five tests in java.lang.Long/classInfo.
+
 2015-08-06  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/Long/constructor.java:
