--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2015-08-12  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/Long/classInfo/getDeclaredMethod.java:
+	* testlet/java/lang/Long/classInfo/getDeclaredMethods.java:
+	* testlet/java/lang/Long/classInfo/getDeclaringClass.java:
+	* testlet/java/lang/Long/classInfo/getEnclosingClass.java:
+	* testlet/java/lang/Long/classInfo/getEnclosingConstructor.java:
+	* testlet/java/lang/Long/classInfo/getEnclosingMethod.java:
+	Six new tests added into java.lang.Long/classInfo.
+
 2015-08-11  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/Long/classInfo/getDeclaredAnnotations.java:
