--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2015-08-14  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/Long/classInfo/getCanonicalName.java:
+	* testlet/java/lang/Long/classInfo/getClasses.java:
+	* testlet/java/lang/Long/classInfo/getComponentType.java:
+	* testlet/java/lang/Long/classInfo/getConstructor.java:
+	* testlet/java/lang/Long/classInfo/getConstructors.java:
+	Five new tests added into java.lang.Long/classInfo.
+
 2015-08-13  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/Long/classInfo/getAnnotation.java:
