--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2015-09-01  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/Long/classInfo/isInstance.java:
+	* testlet/java/lang/Long/classInfo/isInterface.java:
+	* testlet/java/lang/Long/classInfo/isLocalClass.java:
+	* testlet/java/lang/Long/classInfo/isMemberClass.java:
+	* testlet/java/lang/Long/classInfo/isPrimitive.java:
+	* testlet/java/lang/Long/classInfo/isSynthetic.java:
+	Updated six tests in java.lang.Long/classInfo.
+
 2015-08-18  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/Long/classInfo/getSimpleName.java:
