--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2015-09-07  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/Short/classInfo/isInterface.java:
+	* testlet/java/lang/Short/classInfo/isLocalClass.java:
+	* testlet/java/lang/Short/classInfo/isMemberClass.java:
+	* testlet/java/lang/Short/classInfo/isPrimitive.java:
+	* testlet/java/lang/Short/classInfo/isSynthetic.java:
+	Updated five tests in java.lang.Short/classInfo.
+
 2015-09-04  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/Short/classInfo/getMethod.java:
