--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2015-10-12  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/String/classInfo/isAnnotation.java:
+	* testlet/java/lang/String/classInfo/isAnnotationPresent.java:
+	* testlet/java/lang/String/classInfo/isAnonymousClass.java:
+	* testlet/java/lang/String/classInfo/isArray.java:
+	* testlet/java/lang/String/classInfo/isAssignableFrom.java:
+	* testlet/java/lang/String/classInfo/isEnum.java:
+	Updated six tests in: java/lang/String/classInfo/constructor.java.
+
 2015-10-09  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/String/classInfo/getDeclaredField.java:
